<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:padding="15dp"
    android:clipToOutline="true"
    android:layout_height="wrap_content"
    android:clipChildren="true"
    android:background="@drawable/leaderbrds_shape"
    tools:ignore="ExtraText"
    tools:targetApi="s">

    <TextView
        android:id="@+id/txtTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:background="@color/subhead"
        android:text="@string/tutorial"
        android:textAlignment="center"
        android:textColor="@color/header"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAnimafication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tutAnimafication"
        android:textAlignment="textStart"
        android:textColor="@color/subhead"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/txtTutorial"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="fill_horizontal"
        android:text="@string/animafication_tutorial"
        android:textColor="@color/subhead"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAnimafication" />

    <TextView
        android:id="@+id/txtAnimadiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tutAnimadiet"
        android:textAlignment="textStart"
        android:textColor="@color/subhead"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="fill_horizontal"
        android:text="@string/animadiet_tutorial"
        android:textColor="@color/subhead"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAnimadiet" />

    <TextView
        android:id="@+id/txtPointingSystem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tutPointingSystem"
        android:textAlignment="textStart"
        android:textColor="@color/subhead"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />\

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto"
        android:gravity="fill_horizontal"
        android:text="@string/pointingsystem_tutorial"
        android:textColor="@color/subhead"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPointingSystem" />

    <Button
        android:id="@+id/btn_tutorialOK"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/roboto_bold"
        android:text="Okay"
        android:textSize="16sp"
        android:textColor="@color/subhead2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</androidx.constraintlayout.widget.ConstraintLayout>