<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Login_activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="0.1"
            android:text="@string/welcome"
            android:textColor="@color/header"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/roboto"
            android:letterSpacing="0.1"
            android:text="@string/login"
            android:textColor="@color/subhead"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:id="@+id/login_username_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="USERNAME:"
            android:elevation="10dp"
            android:letterSpacing="0.1"
            android:layout_marginBottom="10dp"
            android:textColor="@color/subhead"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/login_username_edittext"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/input_background"
            android:layout_marginBottom="10dp"
            android:hint="username"
            android:fontFamily="@font/roboto"
            android:textColor="@color/subhead"
            android:inputType="text"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/login_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="PASSWORD: "
            android:letterSpacing="0.1"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/subhead"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/login_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/input_background"
            android:layout_marginBottom="30dp"
            android:hint="password: "
            android:fontFamily="@font/roboto"
            android:textColor="@color/subhead"
            android:inputType="textPassword"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">
            <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button"
            android:letterSpacing="0.1"
            android:textColor="@color/header"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login"
            android:textSize="16sp"
            />

            <Button
            android:id="@+id/signup_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/button2"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/subhead2"
            android:letterSpacing="0.1"
            android:text="@string/signup"
            android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_copyrights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:text="© Copyright. All rights reserved."
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/subhead"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>